crates/analyzer/tests/snapshots/errors__undefined_type_param.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: undefined type
  ┌─ compile_errors/undefined_type_param.fe:4:12
  │
4 │     pub x: MysteryType
  │            ^^^^^^^^^^^ `MysteryType` has not been defined

error: undefined type
  ┌─ compile_errors/undefined_type_param.fe:8:21
  │
8 │     pub fn a(_ val: DoesntExist) {
  │                     ^^^^^^^^^^^ `DoesntExist` has not been defined


